# DefenseoftheSky

./: .gitignore  Parameters.py  README.md  SDK使用文档.md  Units.py  log0.txt  log1.txt  main.py  player.hpp  replay.json  蓝天保卫战 播放协议.md
AI/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sample_ai
AI/include/client/: client.cpp  client.h
AI/src/: main.cpp  player.hpp
